--- a/src/main/resources/templates/client/about.html
+++ b/src/main/resources/templates/client/about.html
@@ -174,6 +174,136 @@
                         </div>
                         <hr class="my-0"> </div>
                 </div>
+                <div class="col-sm-6 col-lg-3" style="max-height: 300px;">
+                    <div class="hover-team">
+                        <div class="our-team"> <img th:src="@{/images/img-sang.jpg}" alt="" />
+                            <div class="team-content">
+                                <h3 class="title">Nguyễn Thanh Sang</h3> <span class="post">Web Developer</span> </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="#" class="fab fa-facebook"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-google-plus"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-youtube"></a>
+                                </li>
+                            </ul>
+                            <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
+                        </div>
+                        <div class="team-description">
+                            <p> </p>
+                        </div>
+                        <hr class="my-0"> </div>
+                </div>
+                <div class="col-sm-6 col-lg-3" style="max-height: 300px;">
+                    <div class="hover-team">
+                        <div class="our-team"> <img th:src="@{/images/img-son.jpg}" alt="" />
+                            <div class="team-content">
+                                <h3 class="title">Nguyễn Minh Sơn</h3> <span class="post">Web Developer</span> </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="#" class="fab fa-facebook"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-google-plus"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-youtube"></a>
+                                </li>
+                            </ul>
+                            <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
+                        </div>
+                        <div class="team-description">
+                            <p> </p>
+                        </div>
+                        <hr class="my-0"> </div>
+                </div>
+                <div class="col-sm-6 col-lg-3" style="max-height: 300px;">
+                    <div class="hover-team">
+                        <div class="our-team"> <img th:src="@{/images/img-liet.jpg}" alt="" />
+                            <div class="team-content">
+                                <h3 class="title">Lê Anh Kiệt</h3> <span class="post">Web Developer</span> </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="#" class="fab fa-facebook"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-google-plus"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-youtube"></a>
+                                </li>
+                            </ul>
+                            <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
+                        </div>
+                        <div class="team-description">
+                            <p> </p>
+                        </div>
+                        <hr class="my-0"> </div>
+                </div>
+                <div class="col-sm-6 col-lg-3" style="max-height: 300px;">
+                    <div class="hover-team">
+                        <div class="our-team"> <img th:src="@{/images/img-4.jpg}" alt="" />
+                            <div class="team-content">
+                                <h3 class="title">Hà Vĩ Khang</h3> <span class="post">Web Developer</span> </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="#" class="fab fa-facebook"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-google-plus"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-youtube"></a>
+                                </li>
+                            </ul>
+                            <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
+                        </div>
+                        <div class="team-description">
+                            <p> </p>
+                        </div>
+                        <hr class="my-0"> </div>
+                </div>
+                <div class="col-sm-6 col-lg-3" style="max-height: 300px;">
+                    <div class="hover-team">
+                        <div class="our-team"> <img th:src="@{/images/img-4.jpg}" alt="" />
+                            <div class="team-content">
+                                <h3 class="title">Hà Vĩ Khang</h3> <span class="post">Web Developer</span> </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="#" class="fab fa-facebook"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-google-plus"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="fab fa-youtube"></a>
+                                </li>
+                            </ul>
+                            <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
+                        </div>
+                        <div class="team-description">
+                            <p> </p>
+                        </div>
+                        <hr class="my-0"> </div>
+                </div>
             </div>
         </div>
     </div>
