--- a/src/main/resources/templates/client/profile-order.html
+++ b/src/main/resources/templates/client/profile-order.html
@@ -91,7 +91,8 @@
 							</th:block>
 
 						</div> <!-- table-responsive .end// -->
-						<div th:hidden="${totalPage == 1}" class="pagination-custom row mb-5">
+						<div th:hidden="${totalPage <= 1}" class="pagination-custom row mb-5">
+							
 							<div class="col-3"></div>
 							<div class="col">
 								<ul class="pagination">
