Fix bug on blog

--- a/src/main/resources/templates/admin/blog/formAddBlog.html
+++ b/src/main/resources/templates/admin/blog/formAddBlog.html
@@ -37,7 +37,7 @@
 						<div class="col">
 							<div class="p-5">
 								<div class="text-center">
-									<h1 class="h4 text-gray-900 mb-4">Thêm bài viết mới!</h1>
+									<h1 class="h4 text-gray-900 mb-5">Thêm bài viết mới!</h1>
 								</div>
 
 								<form class="user" action="#" th:action="@{/admin/blog/insert}" th:object="${blogForm}"
@@ -48,6 +48,12 @@
 										<div class="col-sm-6">
 											<input id="image-upload" type="file" th:field="*{file}"
 												accept="image/png, image/jpeg" />
+										</div>
+										<div class="col-sm-6">
+												<select id="book"  th:field="*{book}" class="form-control">
+	                                                <option th:value="-1">--Chọn sách--</option>
+	                                                <option th:value="${book.id}" th:each="book : ${books}">[[${book.title}]]</option>
+	                                            </select>  
 										</div>
 									</div>
 									<div class="row">
