--- a/src/main/resources/templates/admin/blog/formEditBlog.html
+++ b/src/main/resources/templates/admin/blog/formEditBlog.html
@@ -43,16 +43,30 @@
 								<form class="user" action="#" th:action="@{/admin/blog/edit}" th:object="${blogForm}"
 									method="post" enctype="multipart/form-data">
 
-									Ảnh bài viết:
-
-									<div id="imageForm" class="mt-3 mb-3">
-										<label for="image-upload" class="btn btn-outline-primary">
-											Đổi ảnh
-										</label>
-										<span id="imgName" class="ml-2">[[${blogForm.ImageName}]]</span>
-										<input hidden id="image-upload" type="file"
-											accept="image/png, image/jpeg" th:field="*{file}"/>
+									<div class="row">
+										<div id="imageForm" class="mt-3 mb-3 col-6 ">
+											<p>Ảnh bài viết:</p>
+											<label for="image-upload" class="btn btn-outline-primary">
+												Đổi ảnh
+											</label>
+											<span id="imgName" class="ml-2">[[${blogForm.ImageName}]]</span>
+											<input hidden id="image-upload" type="file"
+												accept="image/png, image/jpeg" th:field="*{file}"/>
+										</div>
+										
+										<div class="mt-3 mb-3 col-6 ">
+											<p>Sách:</p>
+											<div class="col-6">
+												<select id="book"  th:field="*{book}" class="form-control">
+	                                                <option th:value="-1">--Chọn sách--</option>
+	                                                <option th:value="${book.id}" th:each="book : ${books}">[[${book.title}]]</option>
+	                                            </select>  
+											</div>
+										</div>
+										
 									</div>
+
+									
 									<div class="row">
 										<div class="form-group col mr-2">
 											<input hidden type="text" th:field="*{id}" class="form-control" />
