--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -17,7 +17,7 @@
 		<li class="nav-item">
 			<a class="nav-link" th:href="@{/admin}">
 				<i class="fas fa-fw fa-tachometer-alt"></i>
-				<span>Dashboard</span></a>
+				<span>Thống kê</span></a>
 		</li>
 
 		<div class="sidebar-heading">
