--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -19,9 +19,9 @@
 		                <div class="container">
 		                    <div class="row">
 		                        <div class="col-md-12">
-		                            <h1 class="m-b-20"><strong>Welcome To <br> Metis's Book</strong></h1>
-		                            <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Metis's Book.</p>
-		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Shop New</a></p>
+		                            <h1 class="m-b-20"><strong>Chào mừng đến với <br> Metis's Book</strong></h1>
+		                            <p class="m-b-40">Tất cả những gì con người làm, nghĩ hoặc trở thành được bảo tồn một cách kỳ diệu trên những trang sách (Thomas Carlyle)</p>
+		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Mua hàng</a></p>
 		                        </div>
 		                    </div>
 		                </div>
@@ -31,9 +31,9 @@
 		                <div class="container">
 		                    <div class="row">
 		                        <div class="col-md-12">
-		                            <h1 class="m-b-20"><strong>Welcome To <br> Book Hub</strong></h1>
-		                            <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Book Hub.</p>
-		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Shop New</a></p>
+		                            <h1 class="m-b-20"><strong>Chào mừng đến với <br> Metis's Book</strong></h1>
+		                            <p class="m-b-40">Không có người bạn nào trung thành như một cuốn sách. (Ernest Hemingway)</p>
+		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Mua hàng</a></p>
 		                        </div>
 		                    </div>
 		                </div>
@@ -43,9 +43,9 @@
 		                <div class="container">
 		                    <div class="row">
 		                        <div class="col-md-12">
-		                            <h1 class="m-b-20"><strong>Welcome To <br> Book Hub</strong></h1>
-		                            <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Book Hub.</p>
-		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Shop New</a></p>
+		                            <h1 class="m-b-20"><strong>Chào mừng đến với <br> Metis's Book</strong></h1>
+		                            <p class="m-b-40"> Một cuốn sách hay trên giá sách là một người bạn dù quay lưng lại nhưng vẫn là bạn tốt. (Sưu tầm)</p>
+		                            <p><a class="btn hvr-hover" th:href="@{/shop/Tatca?page=1}">Mua hàng</a></p>
 		                        </div>
 		                    </div>
 		                </div>
@@ -179,8 +179,7 @@
 										</a>
 		                            </div>
 		                            <ul class="option-blog">
-		                                <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
-		                                <li><a href="#" data-toggle="tooltip" data-placement="right" title="Views"><i class="fas fa-eye"></i></a></li>
+		                                <li><a th:href="@{/blog/blog-detail(blogId=${blog.id})}" data-toggle="tooltip" data-placement="right" title="Views"><i class="fas fa-eye"></i></a></li>
 		                            </ul>
 		                        </div>
 		                    </div>
